			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1221 2000/08/21 17:48:05 sumikawa Exp $

<200008>
Mon Aug 21 13:33:12 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* kame/freebsd4/ports/{ct, v6eval}: TAHI test tools

Mon Aug 21 19:17:17 JST 2000 sakane@ydc.co.jp
	* freebsd3/ports/apache13: apache 1.3.12 + latest IPv6 patch

2000-08-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/route6.c (ip6_rthdr0): made the code friendly
	with the old advanced API (RFC2292). Note that the kernel
	compilation option "COMPAT_RFC2292" is necessary to enable this.

2000-08-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6_rtr.c (prelist_update): corrected the
	interpretation of "StoredLifetime" in the "Jim Bound algorithm".
	Pointed out by OKABE Nobuo <Nobuo_Okabe@yokogawa.co.jp>.

Mon Aug 21 13:33:12 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* kame/freebsd3/ports/{ct, v6eval}: upgrade to 1.1

2000-08-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_mroute.c (ip6_mforward): do not forward
	packets with the unspecified source address. This is rather more
	serious than unicast cases, because some MLD packets can be sent
	with the unspecified source address (although such packets must
	normally set 1 to the hop limit field).

Sun Aug 20 20:14:36 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* freebsd3/ports/zebra: upgrade to 0.88.

Sun Aug 20 20:23:03 JST 2000  itojun@iijlab.net
	* freebsd3/ports/rsync, netbsd/pkgsrc/net/rsync: upgrade to 2.4.5.

Sun Aug 19 JST 2000  itojun@iijlab.net
	* sys/netinet6/ip6_output.c: repair mbuf manipulation in outgoing
	  jumbogram support 
	* sys/netinet6: some pedant fix for memory access alignment constraint.
	* sys/netinet6/ip6_output.c: add diagnostic code for advanced API
	  memory allocation (there seem to be some memory leak, need
	  correction)

Fri Aug 18 23:53:15 JST 2000  itojun@iijlab.net