@@ -1,8 +1,13 @@
 			CHANGELOG for KAME kit
 
-$KAME: CHANGELOG,v 1.1221 2000/08/21 17:48:05 sumikawa Exp $
+$KAME: CHANGELOG,v 1.1222 2000/08/22 08:31:57 suz Exp $
 
 <200008>
+Tue Aug 22 17:19:46 JST 2000	suz@sdl.hitachi.co.jp
+	* kame/sys/netinet6/in6_ifattach.c (in6_ifattach): application 
+	using routing-socket (e.g. zebra) can detect automatic addition 
+	of linklocal I/F address by RTM_NEWADDR message.
+	
 Mon Aug 21 13:33:12 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
 	* kame/freebsd4/ports/{ct, v6eval}: TAHI test tools
 
